@@ -8,6 +8,9 @@ ADDED:
 
 * Added a built-in help queue.
 
+* Added a means of viewing a page with different (lower) permissions by
+* spoofing your role.
+
 CHANGED:
 
 * Updated KaTeX to version 0.8.2.
